# ask-log

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
ask_log/: __init__.py  chat.py  cli.py  config.py  llm_factory.py
log_whisperer/: __init__.py  chat.py  cli.py  config.py  llm_factory.py
tests/: test_chat_end_to_end.py
